--- a/index.html
+++ b/index.html
@@ -15,22 +15,23 @@
         <div class="container-header">
             <div class="logo">PedroCastelo</div>
 
-            <div class="menu-section">
+            <div class="menu-section on">
                 <div class="menu-toggle">
                     <div class="one"></div>
                     <div class="two"></div>
                     <div class="three"></div>
                 </div>
-            </div>
 
-            <nav>
-                <ul class="nav-items">
-                    <li class="nav-item"><a href="#home" class="nav-link ">home</a></li>
-                    <li class="nav-item"><a href="#projetos" class="nav-link ">projetos</a></li>
-                    <li class="nav-item"><a href="#sobre_mim" class="nav-link ">sobre mim</a></li>
-                    <li class="nav-item"><a href="#contatos" class="nav-link ">contatos</a></li>
-                </ul>
-            </nav>
+
+                <nav>
+                    <ul class="nav-items">
+                        <li class="nav-item"><a href="#home" class="nav-link ">home</a></li>
+                        <li class="nav-item"><a href="#projetos" class="nav-link ">projetos</a></li>
+                        <li class="nav-item"><a href="#sobre_mim" class="nav-link ">sobre mim</a></li>
+                        <li class="nav-item"><a href="#contatos" class="nav-link ">contatos</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
 
@@ -72,7 +73,7 @@
 
             </div>
         </section>
-       
+
         <section>
             <hr color="#fff">
             <div class="projetos" id="projetos">
