--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container-header">
             <div class="logo">PedroCastelo</div>
 
-            <div class="menu-section on">
+            <div class="menu-section ">
                 <div class="menu-toggle">
                     <div class="one"></div>
                     <div class="two"></div>
