added mob-navbar and  update img extension bugs

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
                         <li class="nav-item"><a href="#contatos" class="nav-link ">contatos</a></li>
                     </ul>
                 </nav>
-            </div>
+            </div>           
         </div>
+       
     </header>
+    
 
 
 
@@ -58,12 +60,12 @@
 
                 <div class="contacts">
                     <div class="icons">
-                        <a href="#"><img src="/design/imgs/icones/instagram.webp" alt="" class="icone"></a>
-                        <a href="#"><img src="/design/imgs/icones/github.webp" alt="" class="icone"></a>
-                        <a href="#"><img src="/design/imgs/icones/twitter.webp" alt="" class="icone"></a>
-                        <a href="#"><img src="/design/imgs/icones/linkedin.webp" alt="" class="icone"></a>
-                        <a href="#"><img src="/design/imgs/icones/google.webp" alt="" class="icone"></a>
-                        <a href="#"><img src="/design/imgs/icones/facebook.webp" alt="" class="icone"></a>
+                        <a href="#"><img src="./design/imgs/icones/instagram.png" alt="" class="icone"></a>
+                        <a href="#"><img src="./design/imgs/icones/github.png" alt="" class="icone"></a>
+                        <a href="#"><img src="./design/imgs/icones/twitter.png" alt="" class="icone"></a>
+                        <a href="#"><img src="./design/imgs/icones/linkedin.png" alt="" class="icone"></a>
+                        <a href="#"><img src="./design/imgs/icones/google.png" alt="" class="icone"></a>
+                        <a href="#"><img src="./design/imgs/icones/facebook.png" alt="" class="icone"></a>
                     </div>
 
                     <button class="btn-contato">Entrar em contato</button>
