Drastic change at the portifolio

--- a/index.html
+++ b/index.html
@@ -1,83 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="design/style.css">
-    <title>Portifólio</title>
+    <link rel="stylesheet" href="design/css/index.css">
+    <title>Meu portifólio</title>
 </head>
-
 <body>
     <header>
         <div class="container-header">
-            <div class="logo">PedroCastelo</div>
-
+            <!-- <div class="logo">PedroCastelo</div> -->
             <div class="menu-section">
                 <div class="menu-toggle">
                     <div class="one"></div>
                     <div class="two"></div>
                     <div class="three"></div>
                 </div>
-
-
                 <nav>
                     <ul class="nav-items">
-                        <li class="nav-item"><a href="#home" class="nav-link ">home</a></li>
-                        <li class="nav-item"><a href="#projetos" class="nav-link ">projetos</a></li>
-                        <li class="nav-item"><a href="#sobre_mim" class="nav-link ">sobre mim</a></li>
-                        <li class="nav-item"><a href="#contatos" class="nav-link ">contatos</a></li>
+                        <li class="nav-item"><a href="#home" class="nav-link ">Home</a></li>
+                        <li class="nav-item"><a href="#sobre_mim" class="nav-link ">Sobre mim</a></li><li class="nav-item"><a href="#projetos" class="nav-link ">Projetos</a></li>
+                        <li class="nav-item"><a href="#contatos" class="nav-link ">Contatos</a></li>
                     </ul>
                 </nav>
             </div>           
-        </div>
-       
+        </div>      
     </header>
-    
-
-
-
     <main>
-        <section>
-            <div class="titulo-chamativo">
-                <h1 class="profissao">Sou <span class="rosa">designer web</span> e desenvoledor <span
-                        class="verde">front-end </span></h1>
-            </div>
+        <section class="titulo-chamativo" id="home">
+                <h1> Olá, Sou Pedro Castelo...</h1>   
+                <h4>Sou desenvoledor <span class="destaque-vermelho">full stack</span> junior</h4>
         </section>
         <section>
-            <div class="home">
-                <div class="copwrite">
-                    <p class="apresentacao">
-                        <span class="rosa">Olá, </span>Sou <span class="verde">Pedro Castelo</span>
-                    </p>
-                    <p class="text-inicial">
-                        Tenho 16 anos e estou <span class="rosa">disposto</span> a melhorar e aprimorar minhas
-                        <span class="verde">habilidades</span> como designer web...
-                    </p>
-                </div>
-
                 <div class="contacts">
                     <div class="icons">
-                        <a href="#"><img src="./design/imgs/icones/instagram.png" alt="" class="icone"></a>
                         <a href="#"><img src="./design/imgs/icones/github.png" alt="" class="icone"></a>
                         <a href="#"><img src="./design/imgs/icones/twitter.png" alt="" class="icone"></a>
                         <a href="#"><img src="./design/imgs/icones/linkedin.png" alt="" class="icone"></a>
-                        <a href="#"><img src="./design/imgs/icones/google.png" alt="" class="icone"></a>
-                        <a href="#"><img src="./design/imgs/icones/facebook.png" alt="" class="icone"></a>
                     </div>
-
-                    <button class="btn-contato">Entrar em contato</button>
                 </div>
-
-
-
+        </section>
+        <section>
+            <div class="sobre-mim">
+                <div class="copwrite">
+                    <p class="text-inicial">
+                        Tenho 16 anos e estou aprimorando e melhorarando minhas
+                        habilidades como designer web e programador full stack...
+                    </p>
+                </div>
             </div>
         </section>
-
         <section>
-            <hr color="#fff">
             <div class="projetos" id="projetos">
                 <h1 class="titulo-projetos">projetos</h1>
                 <div class="container">
@@ -87,38 +62,21 @@
                         </div>
                         <div class="item-card">
                             <h1>projeto x</h1>
-
                         </div>
                     </div>
-
                     <div class="row-container">
                         <div class="item-card">
                             <h1>projeto x</h1>
-
                         </div>
                         <div class="item-card">
                             <h1>projeto x</h1>
-
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
-        <section>
-            <div class="sobre-mim" id="sobre_mim">
-
-
-
-
-            </div>
-        </section>
-
         <section>
             <div class="contatos" id="contatos">
-
-
-
             </div>
         </section>
     </main>
