Trocando as cores dos links da navbar

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <nav>
                     <ul class="nav-items">
                         <li class="nav-item"><a href="#home" class="nav-link ">Home</a></li>
-                        <li class="nav-item"><a href="#sobre_mim" class="nav-link ">Quem sou</a></li><li class="nav-item"><a href="#projetos" class="nav-link ">Portifólio</a></li>
+                        <li class="nav-item"><a href="#sobre-mim" class="nav-link ">Quem sou</a></li><li class="nav-item"><a href="#projetos" class="nav-link ">Portifólio</a></li>
                         <li class="nav-item"><a href="#contatos" class="nav-link ">Contatos</a></li>
                     </ul>
                 </nav>
@@ -39,14 +39,12 @@
                 <h4>Sou desenvoledor <span class="destaque-vermelho">back-end</span></h4>
         </section>
         <section>
-
-        </section>
-        <section>
-            <div class="sobre-mim">
+            <div class="sobre-mim" id="sobre-mim">
                 <div class="copwrite">
-                    <p class="text-inicial">
-                        Tenho 16 anos e estou aprimorando e melhorarando minhas
-                        habilidades como designer web e programador back-end...
+
+                    <p class="text-inicial"> 
+                        Tenho 17 anos e busco aprimorar e melhorar minhas
+                        habilidades como programador back-end, atualmente estudo na Escola Técnica Estadual Fernando Preste em Sorocaba
                     </p>
                 </div>
             </div>
