Separando o CSS do arquivo navbar.css

--- a/index.html
+++ b/index.html
@@ -36,15 +36,16 @@
     <main>
         <section class="titulo-chamativo" id="home">
                 <h1> Olá, Sou Pedro Castelo...</h1>   
-                <h4>Sou desenvoledor <span class="destaque-vermelho">back-end</span></h4>
+                <h4>Sou desenvolvedor <span class="destaque-vermelho">back-end</span></h4>
         </section>
         <section>
             <div class="sobre-mim" id="sobre-mim">
                 <div class="copwrite">
-
+                    <h1>Quem sou</h1>
                     <p class="text-inicial"> 
                         Tenho 17 anos e busco aprimorar e melhorar minhas
-                        habilidades como programador back-end, atualmente estudo na Escola Técnica Estadual Fernando Preste em Sorocaba
+                        habilidades como programador back-end. 
+                        Atualmente estudo faço curso técnico em Desenvolvimento de Sistemas na ETEC Fernando Preste em Sorocaba.
                     </p>
                 </div>
             </div>
