Estilizando sobre_mim.css

--- a/index.html
+++ b/index.html
@@ -41,12 +41,16 @@
         <section>
             <div class="sobre-mim" id="sobre-mim">
                 <div class="copwrite">
-                    <h1>Quem sou</h1>
-                    <p class="text-inicial"> 
-                        Tenho 17 anos e busco aprimorar e melhorar minhas
-                        habilidades como programador back-end. 
-                        Atualmente estudo faço curso técnico em Desenvolvimento de Sistemas na ETEC Fernando Preste em Sorocaba.
+                    <h1>Quem sou ?</h1>
+                    <p class="text-inicial">
+                        Meu nome é Pedro.
+                        Tenho 17 anos e atualmente faço curso técnico em Desenvolvimento de Sistemas na ETEC Fernando Prestes em Sorocaba. Busco cada vez mais aprimorar e melhorar minhas
+                        habilidades como programador. 
+                        
                     </p>
+                </div>
+                <div class="foto">
+                    <img src="./design//imgs/sem-foto.jpg" alt="">
                 </div>
             </div>
         </section>
