estilizando hard skills

--- a/index.html
+++ b/index.html
@@ -103,13 +103,28 @@
                     <h1>Tecnologias</h1>
                     <div class="icons-skill">
                         <div class="icon-skill">
+                            HTML
+                        </div>
+                        <div class="icon-skill">
+                            CSS
+                        </div>
+                        <div class="icon-skill">
                             JS
+                        </div>
+                        <div class="icon-skill">
+                            TS
                         </div>
                         <div class="icon-skill">
                             PHP
                         </div>
                         <div class="icon-skill">
                             SQL
+                        </div>
+                        <div class="icon-skill">
+                            C#
+                        </div>
+                        <div class="icon-skill">
+                            NODE
                         </div>
                     </div>
                 </div>
