Adicionando os icones

--- a/index.html
+++ b/index.html
@@ -103,28 +103,36 @@
                     <h1>Tecnologias</h1>
                     <div class="icons-skill">
                         <div class="icon-skill">
-                            HTML
+                            <div class="titulo-icon">HTML</div>
+                            <i class="fa-brands fa-html5"></i>
                         </div>
                         <div class="icon-skill">
-                            CSS
+                            <div class="titulo-icon">CSS</div>
+                            <i class="fa-brands fa-css3-alt"></i>
                         </div>
                         <div class="icon-skill">
-                            JS
+                            <div class="titulo-icon">JavaScript</div>
+                            <i class="fa-brands fa-js"></i>
                         </div>
                         <div class="icon-skill">
-                            TS
+                            <div class="titulo-icon">PHP</div>
+                            <i class="fa-brands fa-php"></i>
                         </div>
                         <div class="icon-skill">
-                            PHP
+                            <div class="titulo-icon">SQL Server</div>
+                            <img src="./design/imgs/sqlserver.jpg" alt="" srcset="">
                         </div>
                         <div class="icon-skill">
-                            SQL
+                            <div class="titulo-icon">MySql</div>
+                            <img src="./design/imgs/png-clipart-mysql-mysql-thumbnail.png" alt="" srcset="">
                         </div>
                         <div class="icon-skill">
-                            C#
+                            <div class="titulo-icon">C#</div>
+                            <img src="./design/imgs/kisspng-c-programming-language-logo-microsoft-visual-stud-atlas-portfolio-5b899192d7c600.1628571115357423548838.jpg" alt="" srcset="">
                         </div>
                         <div class="icon-skill">
-                            NODE
+                            <div class="titulo-icon">Node.js</div>
+                            <i class="fa-brands fa-node-js"></i>
                         </div>
                     </div>
                 </div>
