Separando o arquivo sobreMim.css

--- a/index.html
+++ b/index.html
@@ -136,12 +136,11 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </section>
         <section>
             <div class="projetos" id="projetos">
-                <h1 class="titulo-projetos">projetos</h1>
+                <h1 class="titulo-projetos">Portifólio</h1>
                 <div class="container">
                     <div class="row-container">
                         <div class="item-card" href="">
@@ -167,7 +166,7 @@
             </div>
         </section>
     </main>
-    <footer style="height: 9000px;">
+    <footer style="height: 1000px;">
 
     </footer>
 
