--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </section>
         <section>
             <div class="projetos" id="projetos">
-                <h1 class="titulo-projetos">Portifólio</h1>
+                <h1 class="titulo-projetos">Destaques</h1>
                 <div class="container">
                     <div class="row-container">
                         <div class="item-card" href="">
@@ -149,14 +149,15 @@
                         <div class="item-card">
                             <h1>projeto x</h1>
                         </div>
+                        <div class="item-card">
+                            <h1>projeto x</h1>
+                        </div>
+                        <div class="item-card">
+                            <h1>projeto x</h1>
+                        </div>
                     </div>
                     <div class="row-container">
-                        <div class="item-card">
-                            <h1>projeto x</h1>
-                        </div>
-                        <div class="item-card">
-                            <h1>projeto x</h1>
-                        </div>
+                       
                     </div>
                 </div>
             </div>
