Adicionando evento hover com js pra esconder btn-more

--- a/index.html
+++ b/index.html
@@ -143,21 +143,28 @@
                 <h1 class="titulo-projetos">Destaques</h1>
                 <div class="container">
                     <div class="row-container">
-                        <div class="item-card" href="">
+                        <div class="item-card-destaque" href="">
                             <h1>projeto x</h1>
+                            <div class="btn-more none">Ver Mais</div>
                         </div>
-                        <div class="item-card">
-                            <h1>projeto x</h1>
+                        <div class="item-card-destaque">
+                            <h1>projeto y</h1>
+                            <div class="btn-more none">Ver Mais</div>
                         </div>
-                        <div class="item-card">
-                            <h1>projeto x</h1>
+                        <div class="item-card-destaque">
+                            <h1>projeto z</h1>
+                            <div class="btn-more none">Ver Mais</div>
                         </div>
-                        <div class="item-card">
-                            <h1>projeto x</h1>
+                        <div class="item-card-destaque">
+                            <h1>projeto a</h1>
+                            <div class="btn-more none">Ver Mais</div>
                         </div>
                     </div>
                     <div class="row-container">
-                       
+                      <p><span>Conheça aqui</span> todos os meus projetos desenvolvidos:</p>
+                    </div>
+                    <div class="row-container">
+
                     </div>
                 </div>
             </div>
@@ -172,6 +179,7 @@
     </footer>
 
     <script src="Scripts/index.js"></script>
+    <script src="Scripts/hoverProjeto.js"></script>
 </body>
 
 </html>
