Adicionando todos os projetos

--- a/index.html
+++ b/index.html
@@ -163,8 +163,43 @@
                     <div class="row-container">
                       <p><span>Conheça aqui</span> todos os meus projetos desenvolvidos:</p>
                     </div>
-                    <div class="row-container">
-
+                    <div class="row-container wrap">
+                        <div class="item-card-todos">
+                            projeto b
+                        </div>
+                        <div class="item-card-todos">
+                            projeto b
+                        </div>
+                        <div class="item-card-todos">
+                            projeto b
+                        </div>
+                        <div class="item-card-todos">
+                            projeto b
+                        </div>
+                        <div class="item-card-todos">
+                            projeto b
+                        </div>
+                        <div class="item-card-todos">
+                            projeto b
+                        </div>
+                        <div class="item-card-todos">
+                            projeto b
+                        </div>
+                        <div class="item-card-todos">
+                            projeto b
+                        </div>
+                        <div class="item-card-todos">
+                            projeto b
+                        </div>
+                        <div class="item-card-todos">
+                            projeto b
+                        </div>
+                        <div class="item-card-todos">
+                            projeto b
+                        </div>
+                        <div class="item-card-todos">
+                            projeto b
+                        </div>
                     </div>
                 </div>
             </div>
