--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </header>
     <main>
         <section class="titulo-chamativo" id="home">
-            <h1> Olá, Sou Pedro Castelo...</h1>
-            <h4>Sou desenvolvedor <span class="destaque-vermelho">back-end</span></h4>
+            <h1 class="h1-home"></h1>
+            <h4>Desenvolvedor <span class="destaque-vermelho">back-end</span></h4>
         </section>
         <section>
             <div class="sobre-mim" id="sobre-mim">
@@ -215,6 +215,7 @@
 
     <script src="Scripts/index.js"></script>
     <script src="Scripts/hoverProjeto.js"></script>
+    <script type="module" src="Scripts/animationsWriter.js"></script>
 </body>
 
 </html>
