--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="hard-skills">
                     <h1>Tecnologias</h1>
                     <div class="icons-skill">
-                        <div class="icon-skill">
+ <div class="icon-skill">
                             <div class="titulo-icon">HTML</div>
                             <i class="fa-brands fa-html5"></i>
                         </div>
@@ -143,7 +143,7 @@
                 <h1 class="titulo-projetos">Destaques</h1>
                 <div class="container">
                     <div class="row-container">
-                        <div class="item-card-destaque" href="">
+                        <div class="item-card-destaque" >
                             <h1>projeto x</h1>
                             <div class="btn-more none">Ver Mais</div>
                         </div>
@@ -182,24 +182,7 @@
                         <div class="item-card-todos">
                             projeto b
                         </div>
-                        <div class="item-card-todos">
-                            projeto b
-                        </div>
-                        <div class="item-card-todos">
-                            projeto b
-                        </div>
-                        <div class="item-card-todos">
-                            projeto b
-                        </div>
-                        <div class="item-card-todos">
-                            projeto b
-                        </div>
-                        <div class="item-card-todos">
-                            projeto b
-                        </div>
-                        <div class="item-card-todos">
-                            projeto b
-                        </div>
+
                     </div>
                 </div>
             </div>
